Big Encryption Overhaul
Properly finished up a working model for the encryption, made large efficiency changes (but still need to try removing MegaPixel class), may need to further complicate MegaPixel positioning.

--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@ plugins {
     id 'application'
 }
 
-mainClassName = 'plainsight.MainDisplay'
+mainClassName = 'plainsight.Test'
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    
+    implementation 'org.xerial.snappy:snappy-java:1.1.7.6'
 }
 
 jar {
